--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,29 +1,157 @@
-Update this file by 0.01 when adding support for a new device as seen below.
+Update this file by 0.01 each time when adding support for a new device or new options/bug fixes as seen below.
+if more then 20 changes to the tool have been made just update it by 1.00
 
 #================================================================================================#
 
-###### V1.00
-initial release
+###### V5.0.0(beta)
+updated deknox module
+fixed deodexing
+fixed syntax bug 
+fixed image unpacking
+fixed heapsize bug 
+fixed compression level bug
+updated superSU 2.16 
+added superSU update module
+fixed module installer 
+updated init.d trigger 
+changed unknown parameters to N/A
+detects module update feature
+updated degapps module
+support for LG LG-P880 
+support for Sony C1505
+support for Samsung GT-S7580L 
+support for Sony C5502
+support for Sony C6603 
+support for LG LGLS740 
+support for LG LG-D800
+support for Samsung SM-G900P 
+support for Samsung GT-I9512 
+support for IMobile i-mobile IQ5.1 Pro 
+support for Samsung SM-G900V 
+support for LG LG-P710 
+support for Samsung SM-G906S 
+support for LG LG-E612 
+support for LG VS985
 
-###### V1.01
-support for LG G2 (LG-D802)
-support for LG Spirit (LG-MS870)
-support for Galaxy S4 tmobile (SGH-M919)
-support for Galaxy S5 (SM-G900F)
+###### V4.0.1(beta)
+fixed checkdevice.bat procedure
 
-###### V1.02
-support Samsung GT-P3100
-support Samsung GT-P3110
-support Samsung GT-P3113
+###### V4.0.0(beta)
+Fixed device check crash
+removed logging(causing issues)
+changes to the tool configuration system
+tool settings stored in a single file
+fixed apply insecure root method
+image format toggle added
+fixed start from image bug
+added Sparse image support
+added CSC unpack module
+added module installer
+removed all modules besides module installer
+zip files are signed by the kitchen
+modified installer binary
+support for Samsung GT-I9070
+support for Samsung GT-I9105P
+support for Samsung GT-I8190
+support for Samsung GT-I8190N
+support for Huawei Ascend Y300
+support for Motorola XT1033
+support for Motorola XT1031
+support for LG-D950
+support for LG-D801
+support for LG-P875H
 
-###### V1.03
-support Samsung GT-P7500
+###### V3.0.0
+Added module support
+fixed knox detection bug
+deknox is now a module
+de-gapps module added
+fixed debuggerd bug
+fixed export bug(invalid switch)
+window size set by tool
+removed refresh interval if no project
+fixed priv-app zipaligning
+building rom adds to an already signed .zip file(faster and fixes signing bug)
+fixed start from odin package bug
+fixed start from image bug
+fixed project existance parameter
+Added error logging to the tool
+more fluent device check
+better deodex detetction
+faster rom stat refreshing
+improved architecture detection
+improved api level detection
+remove "findandreplacetext" utillity
+more fluent rom refreshing
+fixed sysrw/ro detetection
+removed un-neccessary files/directories
+dos2unix now run silently
+added option to view log
+fixed app-backup initialization
+main tool called from different directory
+fixed no-root bug
+added current value for density
+added abillity to toggle wipes
+better bitcode verification toggle and method
+better gpu rendering toggle and method
+better bootanimation toggle and method
+fixed symlink bug
+compatible with windows XP
+support for Samsung GT-N8010
+support for Samsung GT-N8013
+support for Samsung GT-I8160
+support for HTC 831C
+support for Sony D6503
+support for Sony LT25i
+support for Sony LT29i
+support for Sony LT30i
+support for Sony ST25i
+support for Sony ST25a
+support for Sony MT27i
+support for Sony MT27a
+support for Mediatek GSmart Aku A1
 
-###### V1.04
-fixed deodexing priv-app folder
-fixed signing/delete error
+###### V2.00
+Fixed framework deodexing
+fixed priv-app deodexing
+minor chages to deodexing
+fixed priv-app zipaligning
+removed the need for "processed" folder
+minor changes to zipalignin system
+zipaligning faileled item path specification added
+fixed system image copying method to tmp folder
+fixed systenm extraction from odin package
+fixed symlinks not appearing bug
+fixed knox detetction bug
+more knox folders removed
+updated de-knoxing
+automatic generic symlinks
+resume support for deodexing
+added aroma incompatibillity notice with set_metadata syntax
+added insecure root mode setting(access without verification)
+added insecure boot warning message(unstable)
+updated zipalign binary
+updated archi init.d method
+fixed type errors
+updated supersu binary and app(1.94)
+added second root method
+Fixed signing issue
+add project import/export
+fixed delete project error
+support Samsung SM-N900 
+support Samsung SCH-I605 
+support Samsung SCH-I545 
+support Samsung SGH-1747 
+support Motorola DROID RAZR 
+support Hauwei P6-U06
+support LG LG-P990 
+support Hauwei G526-L22
+
+###### V1.24
+partially fixed deodexing priv-app folder
+partially fixed signing/delete error
 updated aroma binary
-updated supersu binary and app
+updated supersu binary and app(1.93)
 support Samsung GT-S6310
 support Samsung GT-I8262
 support Samsung GT-I9082
@@ -35,3 +163,20 @@ support Samsung SM-T320
 support Samsung SGH-M919 
 support LG LG-P760
 support Motorola XT1032
+
+###### V1.08
+support Samsung GT-P7500
+
+###### V1.07
+support Samsung GT-P3100
+support Samsung GT-P3110
+support Samsung GT-P3113
+
+###### V1.04
+support for LG G2 (LG-D802)
+support for LG Spirit (LG-MS870)
+support for Galaxy S4 tmobile (SGH-M919)
+support for Galaxy S5 (SM-G900F)
+
+###### V1.00
+initial release
