first boot changes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ if more then 20 changes to the tool have been made just update it by 1.00
 #================================================================================================#
 
 ###### V5.0.0(beta)
+folders build on first boot
 updated deknox module
 fixed deodexing
 fixed syntax bug 
